fix failing tests for CalculateRoundUpTest