@@ -1,13 +1,5 @@
 package starlingtechchallenge.utils;
 
-import static java.util.Collections.emptyList;
-import static org.mockito.Mockito.when;
-import static starlingtechchallenge.helpers.Fixtures.*;
-
-import java.time.OffsetDateTime;
-import java.util.Collections;
-import java.util.List;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -18,6 +10,15 @@ import starlingtechchallenge.domain.TransactionFeed;
 import starlingtechchallenge.exception.NoTransactionFoundException;
 import starlingtechchallenge.gateway.AccountGateway;
 import starlingtechchallenge.gateway.TransactionFeedGateway;
+
+import java.time.OffsetDateTime;
+import java.util.List;
+
+import static java.util.Collections.emptyList;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.when;
+import static starlingtechchallenge.helpers.Fixtures.*;
 
 @SpringBootTest
 public class CalculateRoundUpTest {
@@ -41,27 +42,24 @@ public class CalculateRoundUpTest {
 
     Amount actualAmount = calculateRoundUp.roundUp(List.of(transactionFeed));
 
-    Amount expectedAmount = amountFixture();
-
-    Assertions.assertEquals(expectedAmount, actualAmount);
+    assertEquals(75, actualAmount.getMinorUnits());
   }
 
   @Test
   public void shouldFilterOutInBoundTransactions() {
-    Amount expectedAmount = amountFixture();
     Transaction outBoundTransaction = transactionFixture();
     Transaction inBoundTransaction = transactionFixture();
     inBoundTransaction.setDirection("IN_BOUND");
 
     TransactionFeed transactionFeed = new TransactionFeed(List.of(outBoundTransaction, inBoundTransaction));
 
-    Amount actualAmount = calculateRoundUp.roundUp(Collections.singletonList(transactionFeed));
+    Amount actualAmount = calculateRoundUp.roundUp(List.of(transactionFeed));
 
-    Assertions.assertEquals(expectedAmount, actualAmount);
+    assertEquals(75, actualAmount.getMinorUnits());
   }
 
   @Test
   public void shouldThrowExceptionWhenTransactionListIsEmpty() {
-    Assertions.assertThrows(NoTransactionFoundException.class, () -> calculateRoundUp.roundUp((emptyList())));
+    assertThrows(NoTransactionFoundException.class, () -> calculateRoundUp.roundUp((emptyList())));
   }
 }
